--- a/.env
+++ b/.env
@@ -1,8 +1,15 @@
-PORT=8889
-DB_HOST=localhost
-DB_USERNAME=root
-DB_PASSWORD=root
-DB_NAME=near
+# PORT=8889
+# DB_HOST=localhost
+# DB_USERNAME=root
+# DB_PASSWORD=root
+# DB_NAME=near
+
+
+PORT=3306
+DB_HOST=bzobmujphxxn1ru1nlfl-mysql.services.clever-cloud.com
+DB_USERNAME=uzu4cgvqt7sewnaf
+DB_PASSWORD=uwvKSQ7YoGggCc5FMPeg
+DB_NAME=bzobmujphxxn1ru1nlfl
 
 
 
